--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,19 @@
 *.exe
 *.out
 *.app
+
+# Visual Studio
+*.sln
+*.suo
+*.db
+*.ipch
+*.vcxproj
+*.filters
+*.user
+*.log
+*.txt
+*.lastbuildstate
+*.tlog
+*.idb
+*.pdb
+*.ilk
